Added the pseudo elements, updated spacings

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <!-- The footer section must stay at the bottom of the page -->
     <!-- Footer grid for the footer content -->
     <footer class="w-[100%] flex flex-row justify-center bg-[#659f8f] rounded-xl p-[10rem]">
-        <div class="grid grid-cols-[repeat(3,_minmax(200px,_auto))] grid-rows-[repeat(1,_minmax(auto,_auto))] gap-[15rem] p-[5rem] relative bg-[#659f8f]">
+        <div class="grid grid-cols-[repeat(3,_minmax(200px,_auto))] grid-rows-[repeat(1,_minmax(auto,_auto))] gap-[8rem] p-[5rem] relative bg-[#659f8f] grid-underline grid-codespace-title">
             <!-- Subcribe to the mailing list, prevent form default and use js to complete the submission to avoid a page reload -->
             <div class="section-layout pr-[5rem]">
                 <h2>Subscribe to our newsletter for updates</h2>
