--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,28 @@
     <link rel="stylesheet" href="/src/output.css">
     <title>CodeSpace</title>
 </head>
-<body class="h-[100%] m-0 flex flex-col">
+<body class="h-full m-0 flex flex-col">
     <header></header>
 
     <main class="flex-1"></main>
     <!-- The footer section must stay at the bottom of the page -->
     <!-- Footer grid for the footer content -->
-    <footer class="w-[100%] flex flex-row justify-center bg-[#659f8f] rounded-xl p-[10rem]">
-        <div class="grid-layout grid-underline grid-codespace-title">
+    <footer class="w-full flex flex-row justify-center bg-[#659f8f] rounded-xl py-[5rem] px-0.5">
+        <!-- Tailwind is mobile first, create the media querry for the mobile then up in screen size -->
+        <div class="flex flex-col items-start m-0 relative bg-[#659f8f] gap-[1rem] p-[0.5rem]
+                    md:grid md:grid-cols-[repeat(2,_minmax(200px,_auto))] md:grid-rows-[repeat(2,_minmax(20px,_auto))] md:gap-[4rem] md:p-[2rem]
+                    lg:grid lg:grid-cols-[repeat(3,_minmax(200px,_auto))] lg:grid-rows-1 lg:gap-[8rem] lg:py-[3rem]
+                    after-speudo-element-grid-underline before-speudo-element-grid-codespace-title">
             <!-- Subcribe to the mailing list, prevent form default and use js to complete the submission to avoid a page reload -->
-            <div class="section-layout lg:pr-[5rem] md:col-span-2 lg:col-span-1">
+            <div class="flexbox-section-layout md:col-span-2 lg:col-span-1">
                 <h2>Subscribe to our newsletter for updates</h2>
-                <form id="signup-form-id">
+                <form id="signup-form-id" class="w-full">
                     <input type="email" placeholder="Email Address" required class="form-layout bg-amber-50 hover-effect-inputs">
                     <button type="submit" class="form-layout bg-[#d66c46] text-amber-50 hover-effect-inputs mt-1">Subscribe</button>
                 </form>
             </div>
             <!-- Navigation to the different sections on the page -->
-            <div class="section-layout lg:pl-[5rem]">
+            <div class="flexbox-section-layout lg:pl-[5rem]">
                 <h4>Quick Link</h4>
                 <nav class="nav-layout">
                     <a href="#home" class="custom-links"><p>Home</p></a>
@@ -32,7 +36,7 @@
                 </nav>
             </div>
             <!-- Navigation to the different technologies on the page -->
-            <div class="section-layout ">
+            <div class="flexbox-section-layout ">
                 <h4>Technologies</h4>
                 <nav class="nav-layout">
                     <a href="#html" class="custom-links"><p>HTML</p></a>
