Corrected grid positioning for ipad screens

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <main class="flex-1"></main>
     <!-- The footer section must stay at the bottom of the page -->
     <!-- Footer grid for the footer content -->
-    <footer class="w-full flex flex-row justify-center bg-[#659f8f] rounded-xl py-[5rem] px-0.5">
+    <footer class="w-full flex flex-row lg:justify-center bg-[#659f8f] rounded-xl py-[5rem] px-0.5">
         <!-- Tailwind is mobile first, create the media querry for the mobile then up in screen size -->
         <div class="flex flex-col items-start m-0 relative bg-[#659f8f] gap-[1rem] p-5
                     md:grid md:grid-cols-[repeat(2,_minmax(200px,_auto))] md:grid-rows-[repeat(2,_minmax(20px,_auto))] md:gap-[4rem] md:p-[2rem]
